# todo

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  config_active_context.rs  config_create_context.rs  config_get_contexts.rs  config_set_context.rs  create.rs  delete.rs  edit.rs  lib.rs  list.rs  main.rs  move.rs  parse.rs
tests/: config_active_context.rs  config_current_context.rs  config_get_contexts.rs  config_set_context.rs  create.rs
