[package]
name = "todo"
version = "0.1.0"
edition = "2021"
authors = ["TakeYourTime <nextuponstream@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8.6"
log = "0.4.14"
simplelog = "^0.10.0"
clap = { version = "3.1.8", features = ["cargo"] }
walkdir = "2.3.2"
toml = "0.5.8"
serde = { version = "1.0.127", features = ["derive"] }
regex = "1.5.4"
dialoguer = "0.8.0"
lazy_static = "1.4.0"
fancy-regex = "0.7.1"

[dev-dependencies]
assert_cmd = "2.0.1"
predicates = "2.0.2"
